--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-gap:;
+height: 892px;
+padding: 64px 0px 32px;
+gap: 24px;
 }
 .profile__section {
    
@@ -37,11 +39,14 @@ gap:;
         /* height: 528px; */
 }
 .links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     background: #EAECF0;
     list-style: none;
     text-decoration: none;
-    min-height: 68px;
+    /* min-height: 68px; */
     min-width:375px;
     border-radius: 8px;
     padding: 24px 32px;
