--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     /* overflow-y:scroll; */
@@ -13,8 +13,10 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 height: 892px;
+width:375px;
 padding: 64px 0px 32px;
 gap: 24px;
+border:1px solid red;
 }
 .profile__section {
    
@@ -35,7 +37,7 @@ gap: 24px;
         align-items: center;
         padding: 0px;
         gap: 24px;
-        width: 343px;
+        /* width: 343px; */
         /* height: 528px; */
 }
 .links {
@@ -47,7 +49,8 @@ gap: 24px;
     list-style: none;
     text-decoration: none;
     /* min-height: 68px; */
-    min-width:375px;
+    /* min-width:375px; */
+    min-width:90%;
     border-radius: 8px;
     padding: 24px 32px;
     border: 1px solid #EAECF0;
@@ -59,7 +62,9 @@ gap: 24px;
 .links:focus {
 
 }
+.footer__section {
 
+}
 
 @media screen and (min-width:400px) {
     
