--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,9 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-height: 892px;
+/* height: 892px; */
 width:375px;
+/* width:375px; */
 padding: 64px 0px 32px;
 gap: 24px;
 border:1px solid red;
@@ -35,8 +36,9 @@ border:1px solid red;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0px;
+        /* padding: 0px; */
         gap: 24px;
+        border: 1px solid red;
         /* width: 343px; */
         /* height: 528px; */
 }
@@ -44,16 +46,16 @@ border:1px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center;  
     background: #EAECF0;
     list-style: none;
     text-decoration: none;
-    /* min-height: 68px; */
     /* min-width:375px; */
-    min-width:90%;
+    max-width:100%;
     border-radius: 8px;
     padding: 24px 32px;
     border: 1px solid #EAECF0;
+    color: #101828;
 }
 .links:hover {
 
@@ -63,9 +65,17 @@ border:1px solid red;
 
 }
 .footer__section {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
 }
-
+.footer__section img {
+    margin:0 10px;
+}
+/* 
 @media screen and (min-width:400px) {
-    
-}
+    .container {
+        width:90%;
+    }
+} */
