--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@
     width: 90%;
 }
 
-.profile__section {}
+.profile__section {
+    position: relative;
+}
 
 .profile__img {
     width: 88px;
@@ -34,6 +36,11 @@
 
 .profile__img:after:hover {}
 
+.mobile__share-_button {
+    position:absolute;
+    top:63.17px;
+    right:29.33px
+}
 .links__section {
     display: flex;
     flex-direction: column;
@@ -76,7 +83,15 @@
 .main__footer {
     display: flex;
     flex-direction: column;
+    width:90%;
 }
-
+ .ingressive__img {
+    height: 24px;
+    width: 99.096px;
+ }
+ .zuri__img {
+    height: 18.582px;
+    width: 138.775px;
+ }
 
 
