--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center; 
 }
 
 .container {
@@ -36,10 +35,16 @@
 
 .profile__img:after:hover {}
 
-.mobile__share-_button {
+.mobile__share__button {
     position:absolute;
     top:63.17px;
     right:29.33px
+}
+.desktop__share__button {
+    position: absolute;
+    display: none;
+    right:24.44444%;
+    top:56.421px;
 }
 .links__section {
     display: flex;
@@ -94,4 +99,12 @@
     width: 138.775px;
  }
 
+ @media screen and (min-width:600px) {
+    .mobile__share__button {
+        display: none;
+    }
+    .desktop__share__button {
+        display:block;
+    }
+ }
 
