--- a/src/App.css
+++ b/src/App.css
@@ -50,19 +50,20 @@ display: none;
     align-items: center;
     height: auto;
     min-width: 200px;
-    padding: 16px;
+    /* padding: 16px; */
     font-weight: 700;
     font-style: bold;
     font-size: 20px;
      cursor: pointer;
-    /* position: absolute;
+    position: absolute;
     right: 0;
-    top: 70px; */
+    top: 150px;
+    right: 6%;
     z-index: 2;
 }
 .popup__share img {
-    width:50px;
-    height:50px;
+    width:30px;
+    height:30px;
 }
 .mobile__share__button {
     position:absolute;
