--- a/src/App.css
+++ b/src/App.css
@@ -61,9 +61,20 @@ display: none;
     right: 6%;
     z-index: 2;
 }
+
 .popup__share img {
     width:30px;
     height:30px;
+}
+.clipboard__alert {
+         background: #EAECF0;  
+        color: #475467;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 20px;
+        letter-spacing: 0em;
+        text-align: center;
+       padding: 8px, 16px, 8px, 16px;
 }
 .mobile__share__button {
     position:absolute;
