--- a/src/components/Menu/mobilemenu.css
+++ b/src/components/Menu/mobilemenu.css
@@ -3,6 +3,7 @@
     position: absolute;
     top: 63.17px;
     right: 30px;
+    z-index: 2000;
     cursor: pointer;
     width: 90px;
     font-size: 12px;
@@ -15,10 +16,19 @@
     height: 40px;
 }
 
+
 .mobile__menu__popup {
     display: none;
+  box-shadow: 1px 5px 15px rgba(16, 24, 40, .1);
+min-width: 150px;
+  padding:16px 8px;
+  border-radius: 8px;
 }
 
-.mobile__menu__popup .show {
-    display:block;
+.show {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:2px;
 }
+
