--- a/src/components/Menu/mobilemenu.css
+++ b/src/components/Menu/mobilemenu.css
@@ -22,13 +22,14 @@
   box-shadow: 1px 5px 15px rgba(16, 24, 40, .1);
 min-width: 150px;
   padding:16px 8px;
-  border-radius: 8px;
+     border-radius: 8px;
+    z-index: 2000;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
 }
 
 .show {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap:2px;
+    display: flex;
 }
 
