--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
     justify-content: center;
     align-items: center; 
 }
+a {
+    list-style: none;
+        text-decoration: none;
+        color: #101828;
+}
+.show {
+    display: flex;
+}
+
 .container {
     display: flex;
     flex-direction: column;
