--- a/src/components/MainBody/Header/Image.css
+++ b/src/components/MainBody/Header/Image.css
@@ -1,16 +1,41 @@
 .profile__img {
-    width: 88px;
-    height: 88px;
+    position: relative;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     object-fit: cover;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .profile__img > img {
-    width: 88px;
+        width: 88px;
         height: 88px;
         border-radius: 50%;
         object-fit: cover;
+        z-index: 10;
+        border: 1px solid red;
+    }
+    
+
+
+.profile__image__overlay {
+         position: absolute; 
+         top:50%;
+         left:50%;
+        transform:translate(-50%,-50%);
+         background:rgb(0,0,0,0.5);
+        /* top:-50%;
+        left:-50%; */ 
+        display: none;
+}  
+.show {
+    display: flex;
+    z-index: 10;
 }
 /* 
+
 .profile__img > img {
     object-fit: cover;
 } */
