--- a/src/components/MainBody/Header/Image.css
+++ b/src/components/MainBody/Header/Image.css
@@ -1,7 +1,7 @@
 .profile__img {
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     object-fit: cover;
     cursor: pointer;
@@ -21,6 +21,25 @@
 
 
 .profile__image__overlay {
+           align-items: center;
+            background: linear-gradient(0deg, rgba(52, 64, 84, .75), rgba(52, 64, 84, .75));
+            border: 5.5px solid #fff;
+            border-radius: 50%;
+            bottom: 4%;
+            box-sizing: initial;
+            cursor: pointer;
+            display: flex;
+            display: none;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            gap: initial;
+            height: 88px;
+            justify-content: flex-end;
+            position: absolute;
+            width: 88px;
+}  
+
+.profile__image__overlay > img {
          position: absolute; 
          top:50%;
          left:50%;
@@ -28,7 +47,6 @@
          background:rgb(0,0,0,0.5);
         /* top:-50%;
         left:-50%; */ 
-        display: none;
 }  
 .show {
     display: flex;
