--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ a {
     max-width: 1152px;
     padding: 64px 0px 64px;
     gap: 32px;
-    /* border: 1px solid red; */
+     border: 1px solid red; 
     width: 90%;
 }
 .overlay {
@@ -116,7 +116,7 @@ display: none;
     justify-content: center;
     align-items: center;
     gap: 24px;
-    /* border: 1px solid red; */
+    border: 1px solid red;
     width: 100%;
 }
 
@@ -134,7 +134,8 @@ display: none;
     width: 80%;
     border-radius: 8px;
     padding: 24px 32px;
-    border: 1px solid #EAECF0;
+    /* border: 1px solid #EAECF0; */
+    border: 1px solid red;
     color: #101828;
 }
 
@@ -172,7 +173,7 @@ display: none;
     height: 18.582px;
     width: 138.775px;
  }
-
+/* 
  @media screen and (min-width:600px) {
     .mobile__share__button {
         display: none;
@@ -186,4 +187,13 @@ display: none;
         align-items: center;
     }
  }
+ */
+@media screen and (min-width:600px) {
+    .desktop__menu {
+        display: block;
+    }
 
+    .mobile__menu {
+        display: none !important;
+    }
+}
