--- a/src/components/Link/LinkItem.css
+++ b/src/components/Link/LinkItem.css
@@ -16,7 +16,6 @@
     border-radius: 8px;
     padding: 24px 32px;
     /* border: 1px solid #EAECF0; */
-    border: 1px solid red;
     color: #101828;
 }
 
@@ -25,5 +24,6 @@
     top:50%;
     transform: translate(-50%,-50%);
     right:10px; 
+    cursor: pointer;
 } 
 
