--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,27 +1,45 @@
 .main__footer {
-    border-top: 1px solid grey;
     display: flex;
     flex-direction: column;
     padding: 40px, 0px, 40px, 0px;
-    width: 90%;
+    width: 100%;
+    margin-bottom: 0 auto 30px auto;
+    /* max-width: 1152px; */
 }
 
 .ingressive__img {
     height: 24px;
     width: 99.096px;
+    
 }
-
-.zuri__img {
-    height: 18.582px;
-    width: 138.775px;
+.hng__text {
+    color:#667085;
+}
+.zuri__logo {
+    /* height: 18.582px; */
+    /* width: 138.775px; */
+}
+.zuri__logo span {
+    background: #e7332b;
+        border-radius: 50%;
+        display: inline-block;
+        height: 8px;
+        width: 8px;
 }
 
 
 @media screen and (min-width:600px) {
     .main__footer {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
     }
+    .zuri__img {
+        
+    }
+     /* .ingressive__img {
+            transform: scale(1.5);
+     } */
+
 }
 
