--- a/src/components/Link/LinkItem.css
+++ b/src/components/Link/LinkItem.css
@@ -12,13 +12,15 @@
     text-decoration: none;
     font-weight: 500;
     line-height: 28px;
-    width: 80%;
+    width: 100%;
     border-radius: 8px;
     padding: 24px 32px;
     /* border: 1px solid #EAECF0; */
     color: #101828;
 }
-
+.link-item:hover {
+    background-color: #D0D5DD;
+}
 .share__icon {
     position: absolute;
     top:50%;
